# duckdb

./: BSON_BENCHMARK_README.md  BSON_IMPLEMENTATION_SUMMARY.md  Makefile  test_bson.sh
.github/config/: in_tree_extensions.cmake
benchmark/micro/bson/: bson_extract.benchmark
extension/bson/: CMakeLists.txt  README.md  bson_common.cpp  bson_config.py  bson_extension.cpp  bson_functions.cpp
extension/bson/bson_functions/: bson_exists.cpp  bson_extract.cpp  bson_extract_string.cpp  bson_type.cpp  bson_valid.cpp  json_to_bson.cpp
extension/bson/include/: bson_common.hpp  bson_extension.hpp  bson_functions.hpp
scripts/: bson_json_bench.py
src/common/: types.cpp
src/function/table/system/: pragma_table_info.cpp
src/include/duckdb/common/: types.hpp
src/planner/binder/tableref/: bind_showref.cpp
test/sql/bson/: test_bson_basic.test  test_bson_json_cast.test  test_bson_paths.test  test_bson_types.test
test/sql/copy/csv/: 18579.test  test_header_only.test
test/sql/copy/csv/auto/: test_describe_order.test
test/sql/logging/: logging.test  logging_csv.test  logging_file_bind_replace.test
test/sql/parser/: unreserved_keyword_casing.test
test/sql/pragma/: test_show_tables.test
test/sql/show_select/: describe_subquery.test  show_select_comments.test  show_select_constraints.test  test_describe_quoted.test  test_show_select.test
test/sql/types/nested/array/: array_misc.test
